--- a/Assignment04/main.tex
+++ b/Assignment04/main.tex
@@ -79,9 +79,9 @@
         \begin{solution}
             The elements of $G$ are:
             \begin{itemize}
-                \item 4 rotations (by multiples of $2\pi / 4$) about centres of 6 pairs of opposite faces.
+                \item 4 rotations (by multiples of $2\pi / 4$) about centres of 6 pairs of opposite vertices.
                 \item 1 rotation  (by $\pi$) about centres of 15 pairs of opposite edges.
-                \item 2 rotations (by $\pm 2\pi / 3$) about 10 pairs of opposite vertices.
+                \item 2 rotations (by $\pm 2\pi / 3$) about 10 pairs of opposite faces.
             \end{itemize}
             Since $|G| = 60$ and the number of 3 cycles is 20 we can use the question above to show that $G \cong A_5$.
         \end{solution}
